--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -19,7 +19,7 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 /*--------------------------------------------------------------
- TABLE OF CONTENTS:
+TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # Normalize
 # Embedded Fonts
@@ -48,6 +48,33 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 # Mixin
 --------------------------------------------------------------*/
+.site-main .involved-wrapper {
+  width: 480px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.site-main h1 a {
+  text-decoration: none;
+  padding: 20px 36px 19px 19px;
+  width: 120px;
+  height: 200px;
+  font-size: 20px;
+  font-family: Asap;
+  color: #000;
+  background-color: #4FC8A1;
+  font-family: "Noto Sans";
+  font-size: px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 30px;
+  color: #000;
+  margin-left: 15px;
+  box-shadow: none;
+  font-weight: 300;
+  text-shadow: none;
+  letter-spacing: 0.8px;
+  display: block; }
+
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
@@ -1077,19 +1104,19 @@ ul .history-thumbnail img {
     flex-wrap: wrap;
     }
  .philosophy-thumbnails {
-
+     
      overflow: hidden;
     height: 640px;
     img{
-
+       
     width: 200px;
     height: 200px;
-
+   
 }}
 
 .philosophy-titles { width: 200px;
 a{
-
+   
     text-align: left;
     text-decoration: none;
     font-size: 1rem;
@@ -1099,7 +1126,7 @@ a{
 }
 }
 .philosophy-titles a:hover{
-
+    
 }
 
 .philosophy-content p{
