--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -10,18 +10,51 @@
 }
 
 
-  .green-button
-      a{
-       text-decoration: none;
-       padding-left:19px;
-       padding-right:36px;
-       padding-top: 20px;
-       padding-bottom: 19px;
-       width: 120px;
-       height: 220px;
+
+.involved-title {
+  width: 200px;
+  height: 120px;
+  background-color: #4FC8A1;
+  float: left;
+  margin-left: 25px;
+  margin-bottom: 25px;
+
+  // color:#000;
+  // font-size: 20px;
+  // text-align: center;
+  // width: 200px;
+  // height: 120px;
+  // background-color: #4FC8A1;
+  // padding-top: 20px;
+  // display: flex;
+  // justify-content: space-between;
+  // box-sizing: border-box;
+  //
+  }
+    a {
+      width: 145px;
+  height: 81px;
+  font-family: Asap;
+  font-size: 24px;
+  line-height: 27px;
+  color: #1B1B1B;
+  margin-right: 25px
+    }
+
+
+
+  .gre-button {
+      width: 261px;
+      height: 47px;
+      background-color: #4FC8A1;
+      border-radius: 6px;
+      text-decoration: none;
+
+      //  width: 120px;
+      //  height: 220px;
        font-size: 15px;
        font-family: Asap;
-       color:#000;
+       color:#fff;
        background-color: #4FC8A1 ;
        font-family: "Noto Sans";
        font-size: 15px;
@@ -29,28 +62,25 @@
        text-align: center;
        line-height: 30px;
        display:block;
+
+     a {
+
+       width: 216px;
+       height: 30px;
+       font-family: "Noto Sans";
+       padding-top: 10px;
+       font-size: 20px;
+       font-weight: bold;
+       text-align: center;
+       line-height: 30px;
+       color: #FFF;
      }
+   }
 
 
 
 
 
-.involved-title {
-  color:#000;
-  font-size: 20px;
-  text-align: center;
-  width: 200px;
-  height: 120px;
-  background-color: #4FC8A1;
-  padding-top: 20px;
-  display: flex;
-  justify-content: space-between;
-  box-sizing: border-box;
-
-  }
-    a {
-      color:#000;
-    }
 
 
 .text-shadow{
