--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1664,18 +1664,35 @@ body {
   margin-left: auto;
   margin-right: auto; }
 
-.green-button
+.hiid {
+  display: none; }
+
+.involved-title {
+  width: 200px;
+  height: 120px;
+  background-color: #4FC8A1;
+  float: left;
+  margin-left: 25px;
+  margin-bottom: 25px; }
+
 a {
+  width: 145px;
+  height: 81px;
+  font-family: Asap;
+  font-size: 24px;
+  line-height: 27px;
+  color: #1B1B1B;
+  margin-right: 25px; }
+
+.gre-button {
+  width: 261px;
+  height: 47px;
+  background-color: #4FC8A1;
+  border-radius: 6px;
   text-decoration: none;
-  padding-left: 19px;
-  padding-right: 36px;
-  padding-top: 20px;
-  padding-bottom: 19px;
-  width: 120px;
-  height: 220px;
   font-size: 15px;
   font-family: Asap;
-  color: #000;
+  color: #fff;
   background-color: #4FC8A1;
   font-family: "Noto Sans";
   font-size: 15px;
@@ -1683,23 +1700,16 @@ a {
   text-align: center;
   line-height: 30px;
   display: block; }
-
-.involved-title {
-  color: #000;
-  font-size: 20px;
-  text-align: center;
-  width: 200px;
-  height: 120px;
-  background-color: #4FC8A1;
-  padding-top: 20px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
-  box-sizing: border-box; }
-
-a {
-  color: #000; }
+  .gre-button a {
+    width: 216px;
+    height: 30px;
+    font-family: "Noto Sans";
+    padding-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 30px;
+    color: #FFF; }
 
 .text-shadow {
   border-top: 3px solid #248e6a;
